--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<?php
-echo "dev";
-
-?>
+<html>
+  <head>
+    <title>Github</title>
+  </head>
+  <body>
+    <h1>This is dev</h1>
+  </body>
+</html>
